--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
   <app-root></app-root>
-
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAlNbHgwIyn7mVCKpkdie_uu8_a87A1fvc&libraries=places&language=en"></script>
 </body>
 </html>
