Admin Profile Adding and the program Page

--- a/admin/src/index.html
+++ b/admin/src/index.html
@@ -83,6 +83,7 @@
       <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
     </svg>
   </div>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAlNbHgwIyn7mVCKpkdie_uu8_a87A1fvc&libraries=places&language=en"></script>
 </body>
 
 </html>
