--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -17,8 +17,30 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
-<body>
+<body onmouseover="up()">
   <app-root></app-root>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAlNbHgwIyn7mVCKpkdie_uu8_a87A1fvc&libraries=places&language=en"></script>
+	<script src="assets/js/parallax.js"></script>
+<script>
+	var parallax=''
+	window.onload = function() {
+		var scene = document.getElementById('scene');
+		if(scene){
+			parallax = new Parallax(scene);
+		}
+		
+	}
+	function up() {
+		var scene = document.getElementById('scene');
+		if(scene ){
+			if(!parallax){
+				parallax = new Parallax(scene);
+			}
+		}else{
+			parallax='';
+		}
+		
+	}
+	</script>
 </body>
 </html>
