Adding the initial setup of the calendly

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -16,11 +16,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+	<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
 </head>
 <body onmouseover="up()">
   <app-root></app-root>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAlNbHgwIyn7mVCKpkdie_uu8_a87A1fvc&libraries=places&language=en"></script>
 	<script src="assets/js/parallax.js"></script>
+	
+<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
 <script>
 	var parallax=''
 	window.onload = function() {
