--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -18,32 +18,12 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
 </head>
-<body onmouseover="up()">
+<body >
   <app-root></app-root>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAlNbHgwIyn7mVCKpkdie_uu8_a87A1fvc&libraries=places&language=en"></script>
 	<script src="assets/js/parallax.js"></script>
 	
 <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-<script>
-	var parallax=''
-	window.onload = function() {
-		var scene = document.getElementById('scene');
-		if(scene){
-			parallax = new Parallax(scene);
-		}
-		
-	}
-	function up() {
-		var scene = document.getElementById('scene');
-		if(scene ){
-			if(!parallax){
-				parallax = new Parallax(scene);
-			}
-		}else{
-			parallax='';
-		}
-		
-	}
-	</script>
+
 </body>
 </html>
