--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,6 +8,8 @@
   <meta http-equiv="cache-control" content="no-cache" />
 	<meta http-equiv="Pragma" content="no-cache" />
 	<meta http-equiv="Expires" content="-1" />
+	<meta name="viewport" content="maximum-scale=1.0, user-scalable=0">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css"> -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css" rel="stylesheet"  type='text/css'>
@@ -16,31 +18,14 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+	<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
 </head>
-<body onmouseover="up()">
+<body >
   <app-root></app-root>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAlNbHgwIyn7mVCKpkdie_uu8_a87A1fvc&libraries=places&language=en"></script>
 	<script src="assets/js/parallax.js"></script>
-<script>
-	var parallax=''
-	window.onload = function() {
-		var scene = document.getElementById('scene');
-		if(scene){
-			parallax = new Parallax(scene);
-		}
-		
-	}
-	function up() {
-		var scene = document.getElementById('scene');
-		if(scene ){
-			if(!parallax){
-				parallax = new Parallax(scene);
-			}
-		}else{
-			parallax='';
-		}
-		
-	}
-	</script>
+	
+<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+
 </body>
 </html>
