--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -21,16 +21,11 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
 </head>
-<body style="display:none;">
+<body>
   <app-root></app-root>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAlNbHgwIyn7mVCKpkdie_uu8_a87A1fvc&libraries=places&language=en"></script>
 	<script src="assets/js/parallax.js"></script>
 	
 <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-<script>
-    window.addEventListener('load',function(){
-	  document.getElementsByTagName('body')[0].style.display="block";
-	});
-  </script>
 </body>
 </html>
