--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -20,6 +20,11 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+	<style type="text/css">
+  app-root:empty::after {
+    display: none !important;
+  }
+</style>
 </head>
 <body>
   <app-root></app-root>
