--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -22,16 +22,10 @@
 	<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
 </head>
 <body>
-  <app-root style="display:none;"></app-root>
+  <app-root></app-root>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAlNbHgwIyn7mVCKpkdie_uu8_a87A1fvc&libraries=places&language=en"></script>
 	<script src="assets/js/parallax.js"></script>
 	
 <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-<script>
-window.addEventListener('load',function(){
-
-document.getElementsByTagName('app-root')[0].style.display='block';
-})
-</script>
 </body>
 </html>
