--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -20,18 +20,23 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+	<style type="text/css">
+  app-root:empty::after {
+    content: "Loading...";
+    position: absolute;
+    display: block;
+    top: 50%;
+    left: 50%;
+    font-size: 20px;
+    transform: translate(-50%, -50%);
+  }
+</style>
 </head>
 <body>
-  <app-root style="display:none;"></app-root>
+  <app-root></app-root>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAlNbHgwIyn7mVCKpkdie_uu8_a87A1fvc&libraries=places&language=en"></script>
 	<script src="assets/js/parallax.js"></script>
 	
 <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-<script>
-window.addEventListener('load',function(){
-
-document.getElementsByTagName('app-root')[0].style.display='block';
-})
-</script>
 </body>
 </html>
