--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -22,25 +22,11 @@
 	<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
 	
 </head>
-<body style="visibility: hidden;">
+<body>
   <app-root></app-root>
-  
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAlNbHgwIyn7mVCKpkdie_uu8_a87A1fvc&libraries=places&language=en"></script>
 	<script src="assets/js/parallax.js"></script>
 	
 <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
-<script>
-let domReady = (cb) => {
-  document.readyState === 'interactive' || document.readyState === 'complete'
-    ? cb()
-    : document.addEventListener('DOMContentLoaded', cb);
-};
-
-domReady(() => {
-  // Display body when DOM is loaded
-  document.body.style.visibility = 'visible';
-});
-
-</script>
 </body>
 </html>
