--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -89,7 +89,7 @@
 <body >
   <app-root>
   <div id="splash-screen">
-    <img src="./assets/images/logo.png" alt="SAP World" />
+    <img src="assets/images/logo.png" alt="SAP World" />
     <svg class="splash-spinner" viewBox="0 0 50 50">
       <circle class="path" cx="25" cy="25" r="20" fill="none" stroke-width="5"></circle>
     </svg>
