--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -85,6 +85,12 @@
     }
   }
 </style>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7HE57PE2C5"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+    </script>
 </head>
 <body >
   <app-root>
