--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -20,13 +20,17 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 	<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-	<style>
-	app-root:empty::after{
-	 display: none;
-  z-index: -1000;
 	
-	}
-	</style>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-S6N2NDGRS6"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-S6N2NDGRS6', { send_page_view: false});
+</script>
+
 </head>
 <body>
   <app-root></app-root>
