GA id replacement

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -22,13 +22,13 @@
 	<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
 	
 	<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-S6N2NDGRS6"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-G9FPDL5VSZ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-S6N2NDGRS6', { send_page_view: false});
+  gtag('config', 'G-G9FPDL5VSZ', { send_page_view: false});
 </script>
 
 </head>
