--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -94,6 +94,12 @@
   gtag('js', new Date());
 
   gtag('config', 'G-7HE57PE2C5', { send_page_view: false});
+  gtag('event', 'user-signup-success', {
+category: account,
+action: user-signup-success,
+label: google,
+value: 1
+});
 </script>
 
 </head>
