--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -11,16 +11,9 @@
 	<meta name="viewport" content="maximum-scale=1.0, user-scalable=0">
 	
 	<meta property="og:image" content="https://e7.pngegg.com/pngimages/631/179/png-clipart-computer-icons-computer-mouse-hyperlink-url-electronics-text-thumbnail.png">
-<meta property="og:image:alt" content="GitHub is where over 83 million developers shape the future of software, together. Contribute to the open source community, manage your Git repositories, review code like a pro, track bugs and feat...">
-<meta property="og:site_name" content="GitHub">
-<meta property="og:type" content="object">
-<meta property="og:title" content="GitHub: Wheres the world builds software">
-<meta property="og:url" content="https://github.com/">
-<meta property="og:description" content="GitHub is where over 83 million developers shape the future of software, together. Contribute to the open source community, manage your Git repositories, review code like a pro, track bugs and feat...">
-
-<meta property="og:image:type" content="image/png">
-<meta property="og:image:width" content="1200">
-<meta property="og:image:height" content="620">
+<meta property="og:title" content="">
+<meta property="og:type" content="website">
+<meta property="og:image" content="">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css"> -->
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
