--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,6 +9,10 @@
 	<meta http-equiv="Pragma" content="no-cache" />
 	<meta http-equiv="Expires" content="-1" />
 	<meta name="viewport" content="maximum-scale=1.0, user-scalable=0">
+	
+	<meta property="og:title" content="Software Developer(f/m/d) for Kubernetes Operator">
+<meta property="og:description" content="Software Developer(f/m/d) for Kubernetes Operator">
+<meta property="og:image" content="http://rmkcdn.successfactors.com/84a30c28/d37ba75a-6f99-42ad-b278-f.jpg">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css"> -->
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
