--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,10 +9,11 @@
 	<meta http-equiv="Pragma" content="no-cache" />
 	<meta http-equiv="Expires" content="-1" />
 	<meta name="viewport" content="maximum-scale=1.0, user-scalable=0">
-	
-	<meta property="og:title" content="Software Developer(f/m/d) for Kubernetes Operator">
-<meta property="og:description" content="Software Developer(f/m/d) for Kubernetes Operator">
-<meta property="og:image" content="http://rmkcdn.successfactors.com/84a30c28/d37ba75a-6f99-42ad-b278-f.jpg">
+	<meta property="og:title" content="Angular App">
+<meta property="og:site_name " content="My Favourite Albums">
+<meta property="og:url " content="https://example.com/AngularApp/#/embed-video/PRIVATE/3867c8e2-85ba-4ca9-9804-b28769e67746">
+<meta property="og:description" content="Grace is the only complete studio album by Jeff Buckley, released on August 23, 1994..">
+<meta property="og:image" content="http://149.56.180.254/assets/images/employer-screen-01.png">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css"> -->
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
