--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -18,6 +18,10 @@
 <meta property="og:description" content="Cyber Defense Task Force Expert (f/m/d): Delos Cloud">
 <meta property="og:image" content="http://rmkcdn.successfactors.com/84a30c28/d37ba75a-6f99-42ad-b278-f.jpg">
 
+<meta property="og:image:width" content="180" />
+
+<meta property="og:image:height" content="110" />
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css"> -->
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
