--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,26 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SapWorld-jobs-post</title>
+  <title>SapWorld</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="cache-control" content="no-cache" />
 	<meta http-equiv="Pragma" content="no-cache" />
 	<meta http-equiv="Expires" content="-1" />
 	<meta name="viewport" content="maximum-scale=1.0, user-scalable=0">
-	
-	<meta name="keywords" content="Walldorf Cyber Defense Task Force Expert (f/m/d): Delos Cloud, 69190">
-<meta name="description" content="Walldorf Cyber Defense Task Force Expert (f/m/d): Delos Cloud, 69190">
-<link rel="canonical" href="https://jobs.sap.com/job/Walldorf-Cyber-Defense-Task-Force-Expert-%28fmd%29-Delos-Cloud-69190/830999301/">
-<meta name="robots" content="index">
-<meta property="og:title" content="Cyber Defense Task Force Expert (f/m/d): Delos Cloud">
-<meta property="og:description" content="Cyber Defense Task Force Expert (f/m/d): Delos Cloud">
-<meta property="og:image" content="http://rmkcdn.successfactors.com/84a30c28/d37ba75a-6f99-42ad-b278-f.jpg">
-
-<meta property="og:image:width" content="120" />
-
-<meta property="og:image:height" content="90" />
-
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css"> -->
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
