og tag hard code

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <title>SapWorld</title>
   <base href="/">
+  <meta property="og:title" content="Apprentice - Support Commercial Sales F/M" />
+  <meta property="og:description" content="Apprentice - Support Commercial Sales F/M" />
+	<meta property="og:image" content="http://rmkcdn.successfactors.com/84a30c28/d37ba75a-6f99-42ad-b278-f.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="cache-control" content="no-cache" />
 	<meta http-equiv="Pragma" content="no-cache" />
