--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SapWorld</title>
+  <title>SapWorld-title</title>
   <base href="/">
-  <meta property="og:title" content="SapWorld Jop Posting hard code index" />
+  <!--<meta property="og:title" content="SapWorld Jop Posting hard code index" />-->
   <meta property="og:description" content="SapWorld Jop Posting hard code index " />
 	<meta property="og:image" content="https://kajabi-storefronts-production.kajabi-cdn.com/kajabi-storefronts-production/blogs/13681/images/ll4PBGfeRiqDnYXUZyAz_GSM_SM_Image_Sizes_2022_Kajabi_1.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
