--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <title>SapWorld</title>
   <base href="/">
-  <meta property='og:description' content='sap admin'/>
+ <!-- <meta property='og:description' content='sap admin'/>
   <meta property='og:title' content='sap title'/>
-  <meta property='og:image' content='http://149.56.180.254/assets/images/employer-screen-01.png'/>
+  <meta property='og:image' content='http://149.56.180.254/assets/images/employer-screen-01.png'/>-->
   <meta http-equiv="cache-control" content="no-cache" />
 	<meta http-equiv="Pragma" content="no-cache" />
 	<meta http-equiv="Expires" content="-1" />
