--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>SapWorld</title>
   <base href="/">
+  <meta  property="og:title" content="">
   <meta property='og:image' content='http://149.56.180.254/assets/images/linkedinjob.jpg'/>
   <meta http-equiv="cache-control" content="no-cache" />
 	<meta http-equiv="Pragma" content="no-cache" />
