--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,9 +5,8 @@
   <title>SapWorld</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:title" content="Software Developer(f/m/d) for Kubernetes Operator">
-<meta property="og:description" content="Software Developer(f/m/d) for Kubernetes Operator">
-<meta property="og:image" content="http://rmkcdn.successfactors.com/84a30c28/d37ba75a-6f99-42ad-b278-f.jpg">
+  <meta property="og:title" content="">
+<meta property="og:image" content="http://149.56.180.254/assets/images/linkedinjob.jpg">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css"> -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css" rel="stylesheet"  type='text/css'>
