--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <title>SapWorld</title>
   <base href="/">
+  <meta  property="og:title" content="">
+  <meta property='og:image' content='https://sapworld.io/assets/images/linkedinjob.jpg'/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="cache-control" content="no-cache" />
 	<meta http-equiv="Pragma" content="no-cache" />
