--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -90,11 +90,11 @@
 	<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-G9FPDL5VSZ"></script>
 <script>
- /* window.dataLayer = window.dataLayer || [];
+  window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-G9FPDL5VSZ', { send_page_view: false});*/
+  gtag('config', 'G-G9FPDL5VSZ', { send_page_view: false});
 </script>
 
 </head>
